--- a/portfolio/src/main/resources/templates/frontpage.html
+++ b/portfolio/src/main/resources/templates/frontpage.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
 IT WORKS
 <p th:text="${myName}"> </p>
+
+</body>
 </html>
