--- a/portfolio/src/main/resources/templates/frontpage.html
+++ b/portfolio/src/main/resources/templates/frontpage.html
@@ -4,9 +4,74 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="header">
+    <div class="picture">
 
-IT WORKS
-<p th:text="${myName}"> </p>
+        <img width="210" height="210" src="VC6Za.G-72.1.jpg" align="right">
+    </div>
 
+    <div>
+        <h2> Laura Diediske</h2>
+
+    </div>
+
+    <p> Description <br/>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+
+    </p>
+</div>
+
+
+<div class="project-list">
+    <div class="container">
+        <div class="img"> <img width="250" src="im2.jpeg" align="right"></div>
+        <div class="name"> <b>Lesson1</b> </div>
+        <div class="describtion"> What we have learned during this lesson </div>
+    </div>
+    <div class="container">
+        <div class="img"> <img width="250" src="im2.jpeg" align="right"></div>
+        <div class="name"> <b>Lesson2</b> </div>
+        <div class="describtion"> What we have learned during this lesson </div>
+    </div>
+    <div class="container">
+        <div class="img"> <img width="250" src="im2.jpeg" align="right"></div>
+        <div class="name"> <b>Lesson3</b> </div>
+        <div class="describtion"> What we have learned during this lesson </div>
+    </div>
+    <div class="container">
+        <div class="img"> <img width="250" src="im2.jpeg" align="right"></div>
+        <div class="name"> <b>Lesson4</b></div>
+        <div class="describtion"> What we have learned during this lesson </div>
+    </div>
+    <div class="container">
+        <div class="img"> <img width="250" src="im2.jpeg" align="right"></div>
+        <div class="name"> <b>Lesson5</b> </div>
+        <div class="describtion"> What we have learned during this lesson </div>
+    </div>
+    <div class="container">
+        <div class="img"> <img width="250" src="im2.jpeg" align="right"></div>
+        <div class="name"> <b>Lesson6</b> </div>
+        <div class="describtion"> What we have learned during this lesson </div>
+    </div>
+    <div class="container">
+        <div class="img"> <img width="250" src="im2.jpeg" align="right"></div>
+        <div class="name"> <b>Lesson7</b> </div>
+        <div class="describtion"> What we have learned during this lesson </div>
+    </div>
+    <div class="container">
+        <div class="img"> <img width="250" src="im2.jpeg" align="right"></div>
+        <div class="name"> <b>Lesson8 </b></div>
+        <div class="describtion"> What we have learned during this lesson </div>
+    </div>
+
+    </div>
+
+<footer>
+    <p>Author: She Goes Java2</p>
+    <p><a href="https://github.com/LatvianLaura" >Github</a></p>
+</footer>
+
+
+</div>
 </body>
 </html>
